--- a/back/.env
+++ b/back/.env
@@ -5,3 +5,7 @@ DB_HOST=localhost
 
 SESSION_SECRET=votre_secret_de_session
 JWT_SECRET=yourSecretKey
+
+EMAIL_USER=benoitdewigne@gmail.com
+EMAIL_PASS=Zo@goo@Mi14
+
