--- a/back/.env
+++ b/back/.env
@@ -6,5 +6,5 @@ DB_HOST=localhost
 SESSION_SECRET=votre_secret_de_session
 JWT_SECRET=yourSecretKey
 
-EMAIL_USER=
-EMAIL_PASS=
+EMAIL_USER=benoitdewigne@gmail.com
+EMAIL_PASS=pytr inoz sawy cwjs
